[gd_scene load_steps=3 format=3 uid="uid://bumhgxth75vu1"]

[ext_resource type="AudioStream" uid="uid://brk1mxw86h2tr" path="res://assets/audio/audio_stream_generator.tres" id="1_glv2v"]
[ext_resource type="Script" uid="uid://b2mbc645t0wfc" path="res://Main.gd" id="1_uu6xs"]

[node name="Main" type="Node2D"]
script = ExtResource("1_uu6xs")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_glv2v")

[node name="ButtonPlay" type="Button" parent="."]
offset_left = 64.0
offset_top = 192.0
offset_right = 192.0
offset_bottom = 223.0
text = "再生"

[node name="HSliderTime" type="HSlider" parent="."]
offset_left = 72.0
offset_top = 240.0
offset_right = 280.0
offset_bottom = 256.0
min_value = 0.1
max_value = 3.0
step = 0.1
value = 0.1

[node name="OscillatorList" type="OptionButton" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 96.0

[node name="HSliderGain" type="HSlider" parent="."]
offset_left = 64.0
offset_top = 24.0
offset_right = 280.0
offset_bottom = 40.0
max_value = 1.0
step = 0.01
value = 0.67

[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
